--- a/style.css
+++ b/style.css
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Diphylleia&family=Rubik+Scribble&display=swap');
-
+:root {
+  /* Primary Colors */
+  --text-primary: #FFFACD; /* For main text, headings */
+  --text-secondary: #D4D4D4; /* For secondary text or paragraphs */
+  --text-accent: #00CED1;
+}
 html{
     scroll-behavior: smooth;
 }
@@ -538,7 +543,7 @@ header img{
 .bar1, .bar2, .bar3 {
     width: 20px;
     height: 1px;
-    background-color: #ffffff;
+    background-color: var(--text-primary);
     margin: 6px 0;
     transition: 0.4s;
 }
@@ -562,7 +567,7 @@ header ul li{
 header ul li a{
     font-size: 20px;
     text-decoration: none;
-    color:white;
+    color: var(--text-primary);
     font-weight: bold;
     font-family: 'Montserrat Alternates', sans-serif;
 }
@@ -588,7 +593,7 @@ header ul li:hover{
 .introContent p{
     font-size:12vh;
     opacity: 0.4;
-    color: white;
+    color:  var(--text-primary);
     white-space: nowrap;
     font-family: 'Rubik Scribble', system-ui;
     animation: tech 1s linear;
@@ -624,7 +629,7 @@ header ul li:hover{
     position: relative;
 }
 .title p{
-    color: white;
+    color:  var(--text-primary);
     opacity: 0.2;
     font-size: 8vh;
     font-family: 'Rubik Scribble', system-ui;
@@ -644,7 +649,7 @@ header ul li:hover{
 }
 
 .aboutText p{
-    color: white;
+    color:  var(--text-primary);
     text-align: justify;
     font-family: 'Poor Story', system-ui;
     font-size: 38px;
@@ -654,7 +659,7 @@ header ul li:hover{
 }
 .skills p{
     text-align: center;
-    color: white;
+    color:  var(--text-primary);
     font-weight: bold;
     font-size: 30px;
     font-family: 'Amaranth', sans-serif;
@@ -664,75 +669,96 @@ header ul li:hover{
     content: " ";
     height: 3px;
     width: 10%;
-    background-color: #fff;
+    background-color:  var(--text-primary);
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
     display: block;
 }
-.skills ul{
-    margin-top: 80px;
-    display: flex;
-    justify-content: space-around;
+
+.skills ul {
+  margin-top: 80px;
+  display: flex;
+  flex-wrap: wrap; /* Allow wrapping for responsive design */
+  justify-content: center;
+  gap: 20px; /* Add spacing between items */
 }
-.skills ul li{
-    color: white;
-    list-style: none;
-    font-size: 50px;
-    transition: transform 0.2s ease-in-out;
-    cursor: pointer;
-    position: relative;
+.skills ul li {
+  color: var(--text-primary);
+  list-style: none;
+  font-size: 50px;
+  transition: transform 0.2s ease-in-out;
+  cursor: pointer;
+  position: relative;
+  text-align: center;
+}
+.skills ul li::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  font-size: 20px;
+  color: var(--text-primary);
+  visibility: hidden;  /* Initially hidden */
+  transition: visibility 0.2s, top 0.2s, left 0.2s;
+}
+.skills ul li:hover::before {
+  visibility: visible;
+  position: absolute;
+  top: -40px;  /* Adjust top to make text appear above */
+  left: 50%;
+  transform: translateX(-50%); /* Center align text */
+  font-size: 16px; /* Set a smaller font size */
+  font-family: 'Poor Story', system-ui;
+  animation: skillName 0.3s linear;
 }
 .skills ul li:nth-child(1):hover::before {
   content: "C#";
-  left: -5px;
 }
 .skills ul li:nth-child(2):hover::before {
-  content: "JavaScript";
-  left: -15px;
+  content: "JS";
 }
 .skills ul li:nth-child(3):hover::before {
   content: "HTML";
-  left: -10px;
 }
 .skills ul li:nth-child(4):hover::before {
   content: "CSS";
-  left: -3px;
 }
 .skills ul li:nth-child(5):hover::before {
   content: "Docker";
-  left: -10px;
 }
 .skills ul li:nth-child(6):hover::before {
   content: "GitHub";
-  left: -10px;
 }
 .skills ul li:nth-child(7):hover::before {
   content: "Hosting";
-  left: -15px;
 }
 .skills ul li:nth-child(8):hover::before {
   content: "Flutter";
-  left: -10px;
 }
 
-.skills ul li:hover::before{
-    position: absolute;
-    top: 5px;
-    margin-top: -65px;
-    font-size: 30px;
-    color: white;
-    text-align: center;
-    font-family: 'Poor Story', system-ui;
-    animation: skillName 0.3s linear;
+.skills ul li:hover::before {
+  position: absolute;
+  top: 5px;
+  margin-top: -65px;
+  font-size: 30px;
+  color: var(--text-primary);
+  text-align: center;
+  font-family: 'Poor Story', system-ui;
+  animation: skillName 0.3s linear;
 }
-.skills ul li i{
+.skills ul li i {
   transition: transform 0.3s linear;
 }
-.skills ul li i:hover{
-    transform: scale(1.3);
-    text-shadow: 0 0 50px;
+
+.skills ul li i:hover {
+  transform: scale(1.3);
+  text-shadow: 0 0 50px;
 }
+
 @keyframes skillName{
   from{
     transform: translateY(100%) scale(0);
@@ -772,6 +798,7 @@ header ul li:hover{
     padding: 0 20px 10px 20px;
     transition: transform 0.3s ease-in-out;
     cursor: pointer;
+    padding-top: 10px !important;
 }
 .serviceBox div:hover, .projectBox div:hover{
   transform: scale(1.05);
@@ -782,7 +809,7 @@ header ul li:hover{
     display: flex;
     flex-direction: column;
     align-items: center;
-    color: rgb(235, 234, 234);
+    color:  var(--text-primary);
     text-align: justify;
     font-family: 'Amaranth', sans-serif;
 }
@@ -797,7 +824,7 @@ header ul li:hover{
 }
 .hover{
     transform: scale(1.1);
-    box-shadow: 0 0 1px 1px white;
+    box-shadow: 0 0 1px 1px  var(--text-primary);
 }
 .serviceBox .Development, .projectBox .Development{
     margin-top: 30px;
@@ -815,13 +842,13 @@ header ul li:hover{
   box-sizing: border-box;
   margin-top: -70px;
   text-align: center;
-  color: white;
+  color:  var(--text-primary);
   margin-bottom: 150px;
   transition: transform 0.3s ease-in-out;
 }
 #project .bottomP a{
   box-sizing: border-box;
-  color: white;
+  color:  var(--text-primary);
   font-size: 25px;
   text-decoration: none;
   font-family: 'Amaranth', sans-serif;
@@ -838,7 +865,7 @@ header ul li:hover{
     display: flex;
     justify-content: center;
     background-color:  rgb(22, 22, 22);
-    color: white;
+    color:  var(--text-primary);
     overflow: hidden;
 }
 .contactSection div p{
@@ -885,7 +912,7 @@ header ul li:hover{
   color: rgb(18, 116, 201);
 }
 .contactSection div ul li:hover{
-    filter: drop-shadow(0 0 15px white);
+    filter: drop-shadow(0 0 15px  var(--text-primary));
     transform: scale(1.5);
 }
 @media only screen and (max-width: 1100px){
@@ -1000,21 +1027,7 @@ header ul li:hover{
     .aboutText p{
         font-size: 23px;
     }
-    .skills{
-      margin-top: 80px;
-    }
-    .skills p{
-        font-size: 20px;
-    }
-    .skills ul{
-        padding: 0;
-        margin-top: 50px;
-    }
-    .skills ul li{
-        margin: 0;
-        padding: 0;
-        font-size: 30px;
-    }
+    
     #service{
         width: 85%;
         scroll-margin-top: 110px;
@@ -1045,14 +1058,52 @@ header ul li:hover{
     #project .bottomP a{
       font-size: 18px;
     }
-    .skills ul li:nth-child(2):hover::before{
-      content: "JS";
-      left: 5px;
-    }
-    .skills ul li:hover::before{
-      top: 20px;
+   
+   
+}
+@media only screen and (max-width: 768px) and (min-width: 577px){
+  .skills ul li:hover::before {
+    font-size: 30px !important;
+    top: 32px !important;  
+  }
+  .skills{
+    margin-top: 80px;
+  }
+  .skills p{
       font-size: 20px;
+  }
+  .skills ul{
+      padding: 0;
+      margin-top: 50px;
+  }
+  .skills ul li {
+    flex: 1 0 45% !important; 
+    font-size: 48px !important; 
+  }
+  .skills ul li::before{
+    font-size: 48px !important; 
+  }
+  .experienceBox .job{
+    height: 452px;
+  }
+}
+@media (max-width: 576px) {
+    .skills ul li {
+        flex: 1 0 100% !important; /* Take up full width on small screens */
+        font-size: 80px !important; /* Further reduce icon size for mobile */
     }
+    .skills ul li:hover::before {
+        font-size: 36px !important; /* Make hover text smaller for mobile */
+        top: 30px !important; /* Adjust hover text position for mobile */
+    }
+    .experienceBox .job{
+      height: 500px;
+    }
+}
+@media (min-width:769px){
+  .experienceBox .job{
+    height: 370px;
+  }
 }
 @keyframes navBar{
     from{
@@ -1072,12 +1123,52 @@ header ul li:hover{
   margin-bottom: 30px;
 }
 
+/* Center the content */
 .experienceBox {
+  margin-top: 40px;
+}
+.experienceBox .job{
+  background-color: rgb(62, 61, 61);
+}
+
+/* Job container styles */
+.jobContent {
   display: flex;
   flex-direction: column;
-  gap: 20px;
   align-items: center;
 }
+
+/* Image styling */
+.companyLogo {
+  width: 22%;
+  margin-bottom: 15px; /* Spacing between image and content on mobile */
+}
+
+/* Job details */
+.jobDetails {
+  text-align: left;
+  padding-left: 10px; /* Space between text and image */
+}
+
+/* Make sure to remove margin on desktop if image is on the right */
+@media (min-width: 768px) {
+  .jobContent {
+      flex-direction: row;
+      align-items: center;
+  }
+  .companyLogo {
+      margin-bottom: 0; /* No margin at the bottom on larger screens */
+      margin-right: 30px; /* Space between image and text on desktop */
+  }
+}
+
+/* Center job container */
+@media (max-width: 576px) {
+  .job {
+      text-align: center;
+  }
+}
+
 
 .job {
   width: 80%;
@@ -1091,18 +1182,18 @@ header ul li:hover{
 .job h3 {
   font-size: 1.5rem;
   margin-bottom: 10px;
-  color: #ffffff;
+  color:  var(--text-primary);
 }
 
 .job h4 {
   font-size: 1.2rem;
   margin-bottom: 10px;
-  color: #ffffff;
+  color:  var(--text-primary);
 }
 
 .job p {
   font-size: 1rem;
-  color: #ffffff;
+  color:  var(--text-primary);
   margin-bottom: 10px;
 }
 
@@ -1110,7 +1201,7 @@ header ul li:hover{
   list-style: disc;
   margin: 10px 20px;
   padding: 0;
-  color: #ffffff;
+  color:  var(--text-primary);
 }
 
 .job ul li {
